# Static-Visualization-Project

./: README.md  pyproject.toml  requirements.txt
cleaning/: NIGC_and_native_econ_trends_cleaning.ipynb  faf_cleaning.ipynb  resource_revenues_cleaning.ipynb
data/: clean_gaming_report.csv  jagged_nations.xlsx  native-economic-trends-data_current.xlsx  raw_gaming_report.csv  temp_gaming_report.csv  unverified_crosswalk.csv  ~$native-economic-trends-data_current.xlsx
data/FAF_Metallic_Coal_Freight_AllODPairs/: faf_selected_subset.csv
data/clean/: clean_gaming_report.csv  gaming_net_crosswalked.csv  verified_crosswalk.csv
milestones/: static-draft.md  static-proposal-old.md  static-proposal.md
visualization/: NIGC_native_econ_trends_visualization.ipynb  inkscape_changelist.md  viz_design_doc.md
