[project]
name = "static-visualization-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "camelot-py>=1.0.9",
    "polars>=1.34.0",
    "pyarrow>=21.0.0",
    "vega-datasets>=0.9.0",
    "vegafusion>=2.0.3",
    "vl-convert-python>=1.8.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
